fixed bug with line chart overflowing

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -206,4 +206,6 @@ body {
 
 .chart .lineChart.line {
     fill: none;
+    stroke-width: 2;
 }
+
